# ytdl-server

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: config.rs  main.rs
