[package]
name = "ytdl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1.23.0", features = ["full"] }
actix = "0.13.0"
# actix-web-actors = "4.1.0"
anyhow = "1.0.66"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
lazy_static = "1.4.0"
dirs = "4.0.0"
uuid = {version = "1.2.2", features = ["v4"]}
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
chrono = "0.4.23"