[package]
name = "ytdl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
tokio = { version = "1.37.0", features = ["full"] }
actix = "0.13.3"
# actix-web-actors = "4.1.0"
anyhow = "1.0.86"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
lazy_static = "1.4.0"
dirs = "5.0.1"
uuid = { version = "1.8.0", features = ["v4"] }
ytd-rs = { version = "0.1.7", features = ["yt-dlp"] }
chrono = "0.4.38"
urlencoding = "2.1.3"
rand = "0.8.5"
